// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword renders an error message 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        Object {
          "marginVertical": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    Reset Password
  </Text>,
  <View
    style={
      Object {
        "paddingBottom": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "paddingHorizontal": 12,
          },
        ]
      }
      testID="amplify__text-field-container"
    >
      <Text
        accessibilityLabel="Username"
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "lineHeight": 21,
                "padding": 4,
              },
              undefined,
            ],
          ]
        }
      >
        Username
      </Text>
      <View
        accessible={true}
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 10%, 58%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "paddingHorizontal": 8,
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          placeholderTextColor="hsl(210, 10%, 40%)"
          selectionColor="hsl(210, 50%, 10%)"
          style={
            Array [
              Object {
                "color": "hsl(210, 50%, 10%)",
                "flexGrow": 1,
                "fontSize": 16,
                "paddingVertical": 12,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(0, 75%, 85%)",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 12,
        },
        Object {
          "marginHorizontal": 12,
        },
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Array [
            Object {
              "margin": 8,
              "tintColor": "hsl(0, 100%, 20%)",
            },
            Object {},
          ],
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 100%, 20%)",
            "flex": 1,
            "fontSize": 16,
            "paddingHorizontal": 8,
          },
          Object {},
        ]
      }
    >
      Test error message
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderRadius": 4,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        Object {
          "marginHorizontal": 16,
          "marginVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Send code
    </Text>
  </View>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 4,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Back to Sign In
      </Text>
    </View>
  </View>,
]
`;

exports[`ResetPassword renders as expected 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        Object {
          "marginVertical": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    Reset Password
  </Text>,
  <View
    style={
      Object {
        "paddingBottom": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "paddingHorizontal": 12,
          },
        ]
      }
      testID="amplify__text-field-container"
    >
      <Text
        accessibilityLabel="Username"
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "lineHeight": 21,
                "padding": 4,
              },
              undefined,
            ],
          ]
        }
      >
        Username
      </Text>
      <View
        accessible={true}
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 10%, 58%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "paddingHorizontal": 8,
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          placeholderTextColor="hsl(210, 10%, 40%)"
          selectionColor="hsl(210, 50%, 10%)"
          style={
            Array [
              Object {
                "color": "hsl(210, 50%, 10%)",
                "flexGrow": 1,
                "fontSize": 16,
                "paddingVertical": 12,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderRadius": 4,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        Object {
          "marginHorizontal": 16,
          "marginVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Send code
    </Text>
  </View>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 4,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Back to Sign In
      </Text>
    </View>
  </View>,
]
`;
